Add first version of the Hangman game

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
+  <title>Bad Code Party 2018</title>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
-</body>
+    <h1>Bad Code Party 2018</h1>
+    <form id=hangman autocomplete="off">
+      <label for=guess>Character</label>
+      <input id=guess name=guess type=text name="">
+      <button type=submit>Guess</button>
+    </form>
+    <pre id=progress>
+    </pre>
+    <pre class=gallow id=gallow-6>
+  o========o
+  H        |
+  H        |
+  H
+  H
+  H
+  H
+  H
+ / \
+    </pre>
+    <pre class=gallow id=gallow-5>
+  o========o
+  H        |
+  H        |
+  H        O
+  H
+  H
+  H
+  H
+ / \
+    </pre>
+    <pre class=gallow id=gallow-4>
+  o========o
+  H        |
+  H        |
+  H        O
+  H        |
+  H        |
+  H
+  H
+ / \
+    </pre>
+    <pre class=gallow id=gallow-3>
+  o========o
+  H        |
+  H        |
+  H        O
+  H       /|
+  H        |
+  H
+  H
+ / \
+    </pre>
+    <pre class=gallow id=gallow-2>
+  o========o
+  H        |
+  H        |
+  H        O
+  H       /|\
+  H        |
+  H
+  H
+ / \
+    </pre>
+    <pre class=gallow id=gallow-1>
+  o========o
+  H        |
+  H        |
+  H        O
+  H       /|\
+  H        |
+  H       /
+  H
+ / \
+    </pre>
+    <pre class=gallow id=gallow-0>
+  o========o
+  H        |
+  H        |
+  H        O
+  H       /|\
+  H        |
+  H       / \
+  H
+ / \
+    </pre>
+  </body>
 </html>
