Remove bad code

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bad Code Party 2018</title>
 </head>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/index.css" />
+  <script src="scripts/index.js"></script>
+</head>
+<body>
+  
+</body>
+</html>
 <body>
     <h1>Bad Code Party 2018</h1>
     <form id=hangman autocomplete="off">
