--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
   <title>webpack starterkit</title>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div class="flex flex-wrap">
+    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-full xl:w-full mb-4 bg-gray-500">
+        <h1 class="text-center text-capitalize bg-primary-700">webpack starter</h1>
+        <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+    </div>
+  </div>
 </body>
 </html>
