--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,16 @@
   <title>webpack starterkit</title>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <h1>Quiz!</h1>
+
+  <style>
+    .qustion__container {
+      width: 600px;
+      height: 200px;
+      background-color: red;
+    }
+  </style>
+  
+  <div class="app"></div>
 </body>
 </html>
