Use new Asset module
- Replace file-loader with the new Asset module
- Add an image example
- Remove unnecessary d3
- Replace node-sass (deprecated) with dart-sass

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>webpack starterkit</title>
 </head>
 <body>
+  <img src="images/webpack.png" alt="Webpack logo">
   <h1>webpack starter</h1>
   <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
 </body>
