refactor: optimize webpack config and template using modern bundler plugin

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>webpack starterkit</title>
   <meta name="description" content="A light foundation for your next frontend project based on webpack.">
+  <link href="~/styles/index.scss" rel="stylesheet">
+  <script src="~/scripts/index.js" defer="defer"></script>
 </head>
 <body>
-  <img src="images/webpack.png" alt="Webpack logo">
+  <img src="~/images/webpack.png" alt="Webpack logo">
   <h1>webpack starter</h1>
   <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
 </body>
